tests/snapshots/run_wpt_conformance__trtx_floor_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "floor.https.any.js",
    "floor float32 4D tensor",
    "trtx",
    "PASS",
)
