tests/snapshots/run_wpt_conformance__trtx_gatherElements_float16_2D_input_and_int32_indices_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float16 2D input and int32 indices options.axis=0, trtx
 gatherElements :: gatherElements float16 2D input and int32 indices options.axis=0: index 0: actual=-66.0625 expected=-26.15625 ulp=1431 tolerance=4
  inputs: gatherElementsInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125]; gatherElementsIndices: [1, 0, 2, 2, 1, 0] (constant)
  expected gatherElementsOutput: [-26.15625, -68.9375, 51.8125, 43.84375, 89.0625, -77]
  actual gatherElementsOutput: [-66.0625, -68.9375, -77, -66.0625, -68.9375, -77]
  expected gatherElementsOutput full nd:
(shape [2, 3])
  [-26.15625, -68.9375, 51.8125]
  [43.84375, 89.0625, -77]
  actual gatherElementsOutput full nd:
(shape [2, 3])
  [-66.0625, -68.9375, -77]
  [-66.0625, -68.9375, -77]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f16[3, 3];
  }

  consts {
    operand_0: i32[2, 3] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=0, label="");
  }

  outputs { gatherElementsOutput; }
}
